# Fred

./: .gitignore  README.md  forge_ui.py  fred.py  fred_accounts.py  fred_agent.py  fred_chat.py  fred_chat_history.json  fred_cloud.py  fred_coder.py  fred_core.py  fred_db.py  fred_files.py  fred_lang.py  fred_log.py  fred_main.py  fred_network.py  fred_notes.json  fred_notes.py  fred_projects.py  fred_remote.py  fred_settings.py  fred_system.py  fred_tools.py  fred_vault.py
omnibackup/: Cargo.toml  README.md
omnibackup/docs/: FORMAT_SPEC.md
omnibackup/src/: cli.rs  config.rs  error.rs  main.rs
omnibackup/src/core/: backup.rs  chunker.rs  compression.rs  crypto.rs  dedup.rs  gc.rs  index.rs  merkle.rs  migrate.rs  mod.rs  optimize.rs  repository.rs  stats.rs
omnibackup/src/hooks/: mod.rs
omnibackup/src/notifications/: mod.rs
omnibackup/src/p2p/: mod.rs
omnibackup/src/recovery/: mod.rs
omnibackup/src/scheduler/: mod.rs
omnibackup/src/storage/: mod.rs  nextcloud.rs  s3.rs
omnibackup/src/tui/: mod.rs  wizard.rs
omnibackup/src/tui/views/: dashboard.rs  mod.rs
